--- a/app/src/main/res/drawable/ic_clock.xml
+++ b/app/src/main/res/drawable/ic_clock.xml
@@ -1,10 +1,12 @@
-<vector android:height="24dp"
-    android:tint="#020908"
-    android:viewportHeight="24.0"
-    android:viewportWidth="24.0"
-    android:width="24dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="1000dp"
+    android:height="1000dp"
+    android:viewportWidth="1000"
+    android:viewportHeight="1000">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M11.99,2C6.47,2 2,6.48 2,12s4.47,10 9.99,10C17.52,22 22,17.52 22,12S17.52,2 11.99,2zM12,20c-4.42,0 -8,-3.58 -8,-8s3.58,-8 8,-8 8,3.58 8,8 -3.58,8 -8,8zM12.5,7H11v6l5.25,3.15 0.75,-1.23 -4.5,-2.67z" />
+        android:pathData="M500,924.7L500,924.7c234.5,0 424.7,-190.1 424.7,-424.7c0,-234.5 -190.1,-424.7 -424.7,-424.7C265.5,75.3 75.3,265.5 75.3,500C75.3,734.5 265.5,924.7 500,924.7L500,924.7L500,924.7zM500,990L500,990C229.4,990 10,770.6 10,500C10,229.4 229.4,10 500,10c270.6,0 490,219.4 490,490C990,770.6 770.6,990 500,990L500,990L500,990z" />
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M435.7,557.2c-0.7,2.6 -1,5.3 -1,8.2c0,18.2 14.6,32.7 32.6,32.7h245.1c18.1,0 32.6,-14.6 32.6,-32.7c0,-18.2 -14.6,-32.7 -32.6,-32.7H500V206.1c0,-18.2 -14.6,-32.7 -32.7,-32.7c-18.2,0 -32.7,14.6 -32.7,32.7v342.9C434.7,551.8 435,554.5 435.7,557.2L435.7,557.2z" />
 </vector>
