--- a/app/src/main/res/layout/activity_atur_lokasi_part.xml
+++ b/app/src/main/res/layout/activity_atur_lokasi_part.xml
@@ -198,6 +198,29 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/textView27"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="TINKAT RAK"
+                        android:textStyle="bold" />
+
+                    <Spinner
+                        android:id="@+id/sp_tinggiRak"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:orientation="horizontal">
+
+                    <TextView
                         android:id="@+id/textView26"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -213,27 +236,6 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView27"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="TINGGI RAK"
-                        android:textStyle="bold" />
-
-                    <Spinner
-                        android:id="@+id/sp_tinggiRak"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
 
             </LinearLayout>
 
