--- a/app/src/main/res/layout/activity_atur_tenda_.xml
+++ b/app/src/main/res/layout/activity_atur_tenda_.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.widget.NestedScrollView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,9 +22,9 @@
                 android:layout_margin="10dp">
 
                 <TextView
-                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_weight="1"
                     android:text="TIPE WAKTU"
                     android:textColor="@color/red_900" />
@@ -35,9 +33,9 @@
                     android:id="@+id/sp_tipeWaktu_tenda"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:entries="@array/tipeWaktu_tenda"
-                    android:textAlignment="center"
-                    android:layout_weight="1" />
+                    android:textAlignment="center" />
 
             </LinearLayout>
 
@@ -49,91 +47,82 @@
                 android:layout_margin="10dp">
 
                 <TextView
-                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_weight="1"
                     android:text="HARI"
                     android:textColor="@color/red_900" />
 
-                <Spinner
+                <com.rkrzmail.srv.MultiSelectionSpinner
                     android:id="@+id/sp_hari_tenda"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:entries="@array/hari_tenda"
-                    android:textAlignment="center"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:textAlignment="center" />
+
             </LinearLayout>
 
 
             <LinearLayout
-                android:id="@+id/ly_tanggal_tenda"
-                android:layout_marginTop="10dp"
                 android:orientation="horizontal"
+                android:id="@+id/ly_tanggal_tenda"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center">
 
-                <android.support.design.widget.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                <TextView
+                    android:id="@+id/tv_tglMulai_tenda"
+                    android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Tanggal Mulai"
+                    android:textStyle="bold"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/icon_tanggal" />
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_weight="1">
+                    android:text="-"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:textAlignment="center" />
 
-                    <EditText
-                        android:id="@+id/et_tglMulai_tenda"
-                        android:inputType="date"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textAlignment="center"
-                        android:hint="TANGGAL MULAI" />
-
-
-                </android.support.design.widget.TextInputLayout>
-
-                <android.support.design.widget.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                <TextView
+                    android:id="@+id/tv_tglSelesai_tenda"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_weight="1">
-
-                    <EditText
-                        android:id="@+id/et_tglSelesai_tenda"
-                        android:inputType="date"
-                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textAlignment="center"
-                        android:hint="TANGGAL SELESAI" />
-
-
-                </android.support.design.widget.TextInputLayout>
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:text="Tanggal Selesai"
+                    android:drawableRight="@drawable/icon_tanggal"
+                    android:gravity="center" />
 
             </LinearLayout>
 
 
             <android.support.design.widget.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp">
-
-            <EditText
-                android:id="@+id/et_namaLokasi_tenda"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                android:maxLines="1"
-                android:textAlignment="center"
-                android:hint="NAMA LOKASI"
-                />
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp">
+
+                <EditText
+                    android:id="@+id/et_namaLokasi_tenda"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="NAMA LOKASI"
+                    android:focusedByDefault="false"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:textAlignment="center" />
 
 
-        </android.support.design.widget.TextInputLayout>
+            </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tl_alamat"
@@ -141,16 +130,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp">
 
                 <EditText
                     android:id="@+id/et_alamat_tenda"
                     android:layout_width="match_parent"
-                    android:inputType="textMultiLine"
-                    android:gravity="top|left"
                     android:layout_height="100dp"
-                    android:hint="ALAMAT"/>
+                    android:focusedByDefault="false"
+                    android:gravity="top|left"
+                    android:hint="ALAMAT"
+                    android:inputType="textMultiLine" />
 
 
             </android.support.design.widget.TextInputLayout>
@@ -161,65 +151,57 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp">
 
                 <EditText
                     android:id="@+id/et_longlat_tenda"
-                    android:inputType="number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="LONGLAT"/>
+                    android:hint="LONGLAT"
+                    android:focusedByDefault="false"
+                    android:inputType="number" />
 
 
             </android.support.design.widget.TextInputLayout>
 
 
+
             <LinearLayout
-                android:layout_marginTop="10dp"
                 android:orientation="horizontal"
+                android:id="@+id/ly_jam_tenda"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center">
 
-                <android.support.design.widget.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                <TextView
+                    android:id="@+id/tv_jamMulai_tenda"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_weight="1">
+                    android:gravity="center"
+                    android:text="Jam Mulai"
+                    android:textStyle="bold"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/icon_jam" />
 
-                    <EditText
-                        android:id="@+id/et_jamBuka_tenda"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="time"
-                        android:textAlignment="center"
-                        android:hint="JAM BUKA"
-                        />
-
-
-                </android.support.design.widget.TextInputLayout>
-
-                <android.support.design.widget.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_weight="1">
+                    android:text="-"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:textAlignment="center" />
 
-                    <EditText
-                        android:id="@+id/et_jamSelesai_tenda"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="time"
-                        android:textAlignment="center"
-                        android:hint="JAM TUTUP"
-                        />
-
-
-                </android.support.design.widget.TextInputLayout>
+                <TextView
+                    android:id="@+id/tv_jamSelesai_tenda"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:text="Jam Selesai"
+                    android:drawableRight="@drawable/icon_jam" />
 
             </LinearLayout>
 
@@ -227,16 +209,16 @@
                 android:id="@+id/btn_simpan_tenda"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_gravity="end"
+                android:background="@drawable/btn_rounded_accent"
                 android:text="SIMPAN"
-                android:textColor="@color/white_transparency"
-                android:background="@drawable/btn_rounded_accent"/>
+                android:textColor="@color/white_transparency" />
 
 
         </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+    </ScrollView>
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
