--- a/app/src/main/res/layout/activity_atur_terima_part.xml
+++ b/app/src/main/res/layout/activity_atur_terima_part.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -23,78 +22,67 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
-
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
         <LinearLayout
             android:id="@+id/layout_terimapart"
-            android:layout_marginTop="20dp"
-            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:orientation="vertical"
-            >
+            android:padding="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="5dp">
+                android:layout_margin="10dp"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView46"
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Tipe Supplier" />
 
                 <Spinner
                     android:id="@+id/spinnerSupplier"
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:entries="@array/tipe_supplier" />
+                    android:entries="@array/tipe_supplier"
+                    android:textAlignment="center" />
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/layout_nama_supplier"
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="5dp">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp">
 
-                <android.support.design.widget.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                <EditText
+                    android:id="@+id/txtNamaSupplier"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
+                    android:layout_height="50sp"
+                    android:ems="10"
+                    android:hint="Nama Supplier"
+                    android:inputType="text" />
+            </android.support.design.widget.TextInputLayout>
 
-                    <EditText
-                        android:id="@+id/txtNamaSupplier"
-                        android:layout_width="match_parent"
-                        android:layout_height="50sp"
-                        android:ems="10"
-                        android:hint="Nama Supplier"
-                        android:inputType="textPersonName" />
-                </android.support.design.widget.TextInputLayout>
-            </LinearLayout>
 
-            <LinearLayout
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="5dp">
-
-                <android.support.design.widget.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp">
 
                 <EditText
                     android:id="@+id/txtNoDo"
@@ -102,9 +90,8 @@
                     android:layout_height="50sp"
                     android:ems="10"
                     android:hint="NO. DO"
-                    android:inputType="textPersonName" />
-                </android.support.design.widget.TextInputLayout>
-            </LinearLayout>
+                    android:inputType="number" />
+            </android.support.design.widget.TextInputLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -114,22 +101,30 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView43"
+                        android:id="@+id/tglPesan"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Tanggal Pesan"
-                        android:layout_weight="1"/>
+                        android:layout_weight="1"
+                        android:text="TANGGAL PESAN"
+                        android:gravity="center"
+                        android:textStyle="bold"
+                        android:drawableLeft="@drawable/icon_tanggal" />
+
 
                     <TextView
                         android:id="@+id/tglPesan"
-                        android:layout_width="40sp"
-                        android:layout_height="50sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:drawableLeft="@drawable/ic_date" />
+                        android:text="TANGGAL PESAN"
+                        android:gravity="center"
+                        android:textStyle="bold"
+                        android:drawableLeft="@drawable/icon_tanggal" />
 
 
                 </LinearLayout>
@@ -138,27 +133,27 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="5dp">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/textView42"
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
-                        android:text="Tanggal Terima"
-                        android:layout_weight="1"/>
+                        android:layout_weight="1"
+                        android:text="Tanggal Terima" />
 
                     <TextView
                         android:id="@+id/tglTerima"
-                        android:layout_width="40sp"
-                        android:layout_height="40sp"
-                        android:drawableLeft="@drawable/ic_date"
-                        android:layout_weight="1" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:drawableLeft="@drawable/icon_tanggal" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -172,52 +167,53 @@
                 <LinearLayout
                     android:id="@+id/layout_pembayaran"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/textView41"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Pembayaran"
-                        android:layout_weight="1"/>
+                        android:layout_weight="1"
+                        android:text="Pembayaran" />
 
                     <Spinner
                         android:id="@+id/spinnerPembayaran"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAlignment="center"
+                        android:layout_weight="1"
                         android:entries="@array/pembayaran"
-                        android:layout_weight="1" />
+                        android:textAlignment="center" />
 
                 </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="5dp">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:id="@+id/layout_jatuh_tempo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/textView40"
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
-                        android:text="Jatuh Tempo"
-                        android:layout_weight="1"/>
+                        android:layout_weight="1"
+                        android:text="Jatuh Tempo" />
 
                     <TextView
                         android:id="@+id/jatuhTempo"
-                        android:layout_width="40sp"
-                        android:layout_height="40sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:drawableLeft="@drawable/ic_date" />
+                        android:drawableLeft="@drawable/icon_tanggal" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -229,43 +225,35 @@
                 android:orientation="vertical"
                 android:padding="5dp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
 
                     <android.support.design.widget.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1">
 
-                    <EditText
-                        android:id="@+id/txtOngkosKirim"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:hint="Ongkos Kirim"
-                        android:inputType="textPersonName" />
+                        <EditText
+                            android:id="@+id/txtOngkosKirim"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:ems="10"
+                            android:hint="Ongkos Kirim"
+                            android:inputType="number" />
                     </android.support.design.widget.TextInputLayout>
 
-                </LinearLayout>
             </LinearLayout>
 
             <Button
                 android:id="@+id/btnSelanjutnya"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
                 android:background="@drawable/btn_rounded_accent"
                 android:gravity="center"
-                android:layout_gravity="end"
                 android:text="Selanjutnya"
-                android:textColor="@color/white_transparency"/>
+                android:textColor="@color/white_transparency" />
         </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
-
-
-
+    </ScrollView>
 
 
 </android.support.design.widget.CoordinatorLayout>
