--- a/app/src/main/res/layout/activity_booking2_.xml
+++ b/app/src/main/res/layout/activity_booking2_.xml
@@ -35,9 +35,9 @@
 
                 <Button
                     android:id="@+id/btn_getTgl_booking2"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/ic_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/icon_tanggal"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:layout_marginLeft="10dp"/>
@@ -51,9 +51,9 @@
 
                 <Button
                     android:id="@+id/btn_getJam_booking2"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/ic_clock"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/icon_jam"
                     android:layout_marginRight="10dp"
                     android:layout_marginLeft="10dp"/>
 
@@ -78,7 +78,7 @@
                     android:id="@+id/btn_getJemput_booking2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_clock"
+                    android:drawableLeft="@drawable/icon_jam"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp" />
 
@@ -87,7 +87,7 @@
 
             <Button
                 android:id="@+id/btn_partJasa_booking2"
-                android:layout_width="217dp"
+                android:layout_width="219dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_marginTop="10dp"
@@ -153,7 +153,7 @@
                     android:id="@+id/btn_getAntar_booking2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_clock"
+                    android:drawableLeft="@drawable/icon_jam"
                     android:textAlignment="center"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"/>
