--- a/app/src/main/res/layout/activity_lokasi_part.xml
+++ b/app/src/main/res/layout/activity_lokasi_part.xml
@@ -6,12 +6,15 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:animateLayoutChanges="true"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     tools:context=".MainActivity">
 
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
 
             <LinearLayout
@@ -24,7 +27,7 @@
                     android:layout_width="330dp"
                     android:layout_height="130dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="150dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginBottom="20dp"
                     android:visibility="gone"
                     />
@@ -71,36 +74,22 @@
 
                 <com.rkrzmail.srv.NikitaAutoComplete
                     android:id="@+id/et_cariLokasiPart"
-                    android:focusedByDefault="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawablePadding="22dp"
                     android:background="@color/grey_80"
                     android:maxLines="1"
                     android:inputType="text"
-                    android:textAlignment="center"
                     android:singleLine="true"
                     android:drawableRight="@android:drawable/ic_menu_search"
                     android:gravity="left|center"
                     android:hint="Cari Part"
                     android:padding="10dp"
+                    android:cursorVisible="false"
                     android:textColorHint="@android:color/darker_gray" />
 
             </android.support.design.widget.TextInputLayout>
         </RelativeLayout>
 
     </android.support.design.widget.AppBarLayout>
-
-
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_tambah_part"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:visibility="visible"
-        app:backgroundTint="@color/blue_900"
-        app:srcCompat="@android:drawable/ic_input_add" />
 
 </android.support.design.widget.CoordinatorLayout>
