--- a/app/src/main/res/layout/item_biaya_mekanik2.xml
+++ b/app/src/main/res/layout/item_biaya_mekanik2.xml
@@ -1,64 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/tools"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_marginLeft="7dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginRight="7dp"
+    android:layout_marginBottom="4dp"
+    android:layout_weight="5"
+    android:padding="10dp"
+    app:cardElevation="4dp"
+    app:cardCornerRadius="10dp">
 
-    <android.support.v7.widget.CardView
+    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="#FFFFFF">
+        android:layout_margin="10dp"
+        android:stretchColumns="*">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="7sp">
+        <TableRow>
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tv_tgl_biayaMekanik"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:foregroundGravity="center"
-                android:orientation="vertical"
-                android:background="@drawable/border_solid"
-                android:padding="10sp">
+                android:text="Tanggal"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/txtTgl"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Tanggal" />
+            <TextView
+                android:id="@+id/tv_user_biayaMekanik"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="User"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/txtUser"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="User" />
+        </TableRow>
 
-                <TextView
-                    android:id="@+id/txtMeka3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Mekanik 3" />
+        <TableRow>
 
-                <TextView
-                    android:id="@+id/txtMeka2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Mekanik 2" />
+            <TextView
+                android:id="@+id/tv_minBayar_biayaMekanik"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Min Berbayar"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/txtMeka1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Mekanik 1" />
+            <TextView
+                android:id="@+id/tv_mekanik1_biayaMekanik"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mekanik 1 (Rp)"
+                android:textStyle="bold" />
 
-            </LinearLayout>
 
-        </LinearLayout>
+        </TableRow>
 
-    </android.support.v7.widget.CardView>
+        <TableRow>
 
-</FrameLayout>
+            <TextView
+                android:id="@+id/tv_mekanik2_biayaMekanik"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mekanik 2 (Rp)"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_mekanik3_biayaMekanik"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mekanik 3 (Rp)"
+                android:textStyle="bold" />
+
+        </TableRow>
+
+    </TableLayout>
+
+</android.support.v7.widget.CardView>
