--- a/app/src/main/res/layout/notifikasi_alokasi_part.xml
+++ b/app/src/main/res/layout/notifikasi_alokasi_part.xml
@@ -9,7 +9,7 @@
     android:layout_margin="20dp"
     android:padding="10dp"
     app:cardCornerRadius="15dp"
-    app:cardElevation="10dp">
+    app:cardElevation="3dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,7 +58,7 @@
                 android:layout_gravity="center"
                 android:background="@drawable/btn_rounded_accent"
                 android:padding="10dp"
-                android:text="Alokasikan Part"
+                android:text="Atur Lokasi"
                 android:textColor="@color/white_transparency" />
 
         </LinearLayout>
